--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
+:root {
+  --text-color: #fafafa;
+  --secondary-text: #999999;
+  --black: #0c0c0c;
+  --bg-color: #242628;
+  --horizontal-overscan: 64px;
+  --vertical-overscan: 38px;
+  --nav-pad: 206px;
+}
+
+/* open-sans-regular - latin */
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url(./open-sans.woff2) format(woff2);
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 10px;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-size: 2.2rem;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body::-webkit-scrollbar {
+  display: none;
+}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+iframe {
+  height: 100vh;
+  width: 100vw;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+a:focus {
+  color: red;
 }
