--- a/src/Player.css
+++ b/src/Player.css
@@ -2,19 +2,54 @@ video {
   height: 100vh;
 }
 
-.Controls {
-  display: flex;
+.controls {
+  display: none;
+  visibility: hidden;
   z-index: 10;
   position: fixed;
   bottom: var(--vertical-overscan);
+  padding: 0 var(--horizontal-overscan);
+  width: 100vw;
+}
+
+.button-zone {
+  display: flex;
   justify-content: space-around;
   width: 100%;
 }
-.Controls button {
+
+.controls-active {
+  display: block;
+  visibility: visible;
+}
+
+.button-zone button {
   height: 6rem;
   width: 6rem;
   font-size: 5rem;
   color: inherit;
   background-color: transparent;
   border: none;
+}
+
+.title {
+  font-size: 3.2rem;
+}
+
+.video-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.time-bar {
+  width: 100%;
+  height: 1rem;
+  background-color: var(--text-color);
+  margin-bottom: 2rem;
+}
+
+.time-inner {
+  height: 1rem;
+  background-color: red;
 }
